# aas-core-protobuf

./: CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
dev_scripts/: precommit.py  pyproject.toml
dev_scripts/aas_core_protobuf_generation/: main.py
dev_scripts/snippets/v3_1/: namespace.txt
v3/: types.proto
